<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainActivity"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bg"
            android:src="@mipmap/bg1"
            tools:srcCompat="@mipmap/bg1"
            tools:src="@mipmap/bg1"
            android:scaleType="centerCrop"
            android:contentDescription="@string/background"/>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:padding="25dp"

                  android:gravity="center"
                  android:orientation="vertical"
                  app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:id="@+id/greenbacks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:contentDescription="@string/greenbacks"
                app:srcCompat="@mipmap/greenbacks" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/welcome"
                  android:textAlignment="center"
                  android:textColor="@android:color/white"
                  android:fontFamily="@font/nedbanksansblack" android:textSize="60sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/get_with_the_new_greenbacks"
                  android:textAlignment="center"
                  android:textColor="@android:color/white" android:maxWidth="700dp"
                  android:fontFamily="@font/nedbanksansbold" android:textSize="24sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/swipe_to_start_your_journey"
                  android:textAlignment="center"
                  android:textColor="@android:color/white"
                  android:layout_marginTop="32dp"
                  android:fontFamily="@font/nedbanksansbold" android:textSize="24sp"/>
    </LinearLayout>

    <ImageView
            android:id="@+id/larry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/logo"
            android:src="@mipmap/nedbank_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/nedbank_logo" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/see_money_differently"
              android:textAlignment="center"
              android:textColor="@android:color/white"
              android:layout_marginEnd="25dp"
              android:layout_marginBottom="10dp"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:fontFamily="@font/nedbanksansbold" android:textSize="20sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>